# bus_status

./: .gitignore  BusRouteList.txt  Cargo.toml  bugs.txt  bus_route_data.json  compare.diff  const_reference.txt  display.txt  next_steps.txt  output.txt  output1.txt
src/: bus.rs  consts.rs  data.rs  display.rs  lib.rs  location.rs  main.rs  main_loop.rs  passenger.rs  station.rs  thread.rs
tests/: main_loop_tests.rs  passenger_bus_route.rs
tests/test_data/: data_with_distances.json  simple_data.json
