[package]
name = "bus_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
rand = "0.8.5"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
simple_logger = "5.0.0"
tokio = { version = "1.47.0", features = ["rt", "sync", "macros"] }
uuid = { version = "1.4.1", features = ["v4", "serde"]}


[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
